# dv2-airflow-dbt

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dv2_airflow/: config.py
dv2_airflow/dags/dbt/: dag_dbt_test.py
dv2_airflow/dags/raw/: raw_dag_customer_product_purchase.py
dv2_airflow/data/csv/: customer_product_purchase.csv
dv2_airflow/dv2_dbt/: dbt_project.yml
dv2_airflow/dv2_dbt/.dbt/: profiles.yml
dv2_airflow/dv2_dbt/models/raw/: raw_test.sql
dv2_airflow/scripts/py/db_tools/: postgresql_tools.py
dv2_airflow/scripts/sql/: raw_customer_product_purchase.sql
dv2_airflow/scripts/sql/raw/: raw_customer_product_purchase.sql
